create add s3 minio and image_path train
